add teams as input for policy scan

--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,10 @@ inputs:
     description: 'Veracode Policy Name'
     required: false
     default: ''
+  teams:
+    description: 'Veracode Team Name'
+    required: false
+    default: ''
   scantimeout:
     description: 'Scan Timeout in minutes'
     required: false
