--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "pack": "ncc build src/index.js -o dist"
   },
   "dependencies": {
     "@actions/artifact": "^1.1.1",
