--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@actions/artifact": "^1.1.1",
+    "@actions/artifact-v2": "npm:@actions/artifact@^2.1.4",
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "axios": "^1.4.0",
