--- a/.github/workflows/nightlyScan.yml
+++ b/.github/workflows/nightlyScan.yml
@@ -3,7 +3,7 @@ name: Veracode Security Scan
 on: 
   pull_request:
     branches:
-      - master
+      - main
   schedule:
     - cron: 0 4 * * *
   workflow_dispatch:
