--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@actions/artifact": "^2.1.4",
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "fast-xml-parser": "4.4.1",
     "axios": "^1.4.0",
     "minimatch": "^9.0.3",
     "sjcl": "^1.0.8",
