--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@actions/github": "^5.1.1",
     "axios": "^1.7.7",
     "fast-xml-parser": "4.4.1",
+    "https-proxy-agent": "^7.0.5",
     "minimatch": "^9.0.3",
     "sjcl": "^1.0.8",
     "xml2js": "^0.6.0"
