--- a/action.yml
+++ b/action.yml
@@ -51,6 +51,10 @@ inputs:
     description: 'Sandbox Name'
     required: false
     default: ''
+  gitRepositoryUrl:
+    description: 'Sandbox Name'
+    required: false
+    default: ''
 
 runs:
   using: 'node20'
