--- a/action.yml
+++ b/action.yml
@@ -52,7 +52,7 @@ inputs:
     required: false
     default: ''
   gitRepositoryUrl:
-    description: 'Developer repository url'
+    description: 'Source Repository URL'
     required: false
     default: ''
 
